# QUIT

./: CMakeLists.txt  azure-pipelines.yml  build.sh
.github/workflows/: build.yml  release.yml  test.yml
Python/: mupa_notebook.ipynb  steady_state.ipynb
Python/QUIT/: base.py  relaxometry.py
Python/QUIT/interfaces/: rufis.py
Python/Tests/: test_relax.py  test_rufis.py
Source/: CMakeLists.txt  qi_main.cpp
Source/B1/: CMakeLists.txt  b1.cpp
Source/Core/: Args.cpp  CMakeLists.txt  ModelFitFilter.h  SimulateModel.h
Source/CoreProgs/: CMakeLists.txt  coreprogs.cpp
Source/MT/: CMakeLists.txt  mt.cpp  mt.h  qi_lorentzian.cpp  qi_mtsat.cpp  qi_qmt.cpp  qi_ssfp_emt.cpp
Source/Perfusion/: qi_ase_oef.cpp  qi_asl.cpp
Source/RUFIS/: CMakeLists.txt  mt_main.cpp  mupa_main.cpp  mupa_model.h  mupa_sequence.cpp  mupa_sequence.h  ss_T2.cpp  ss_T2.h  ss_main.cpp  ss_model.cpp  ss_model.h
Source/Relaxometry/: Commands.cpp  Commands.h  OnePoolSignals.h  ThreePoolModel.h  TwoPoolModel.h  qi_jsr.cpp  qi_mpm_r2s.cpp  qi_mupa.cpp  qi_planet.cpp  qi_ssfp_ellipse.cpp  qi_vfa_prep.cpp  qidespot1.cpp  qidespot1hifi.cpp  qidespot2.cpp  qidespot2fm.cpp  qimcdespot.cpp  qimcdespot.dontcompile  qimp2rage.cpp  qimultiecho.cpp
Source/Sequences/: CMakeLists.txt
